Remove Eclipse Depencies